# heiST

./: .gitignore  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ai_training/: __init__.py  sanitation_validator.py  sanitizer.py  splitter.py
ai_training/extraction/: __init__.py
automatic_challenge_import/: setup_challenge.py  template.yaml  upload_ova_file.py  yaml_parser.py
automatic_ova_setup/: setup_ova.py  template.build
backend/: DatabaseClasses.py  api.py  cleanup.py  cloud_init_ip_pool.py  delete_machine_templates.py  delete_user_config.py  get_db_connection.py  get_user_config.py  import_machine_templates.py  launch_challenge.py  launch_timing_logger.py  mypy.ini  pool_manager.py  pool_size_prediction.py  proxmox_api_calls.py  qemu_ga_wrapper.py  stop_challenge.py  subnet_calculations.py  teardown_challenge.py  warmup_challenge.py
backend/tests/: run_tests.py  test_backend_challenge_handling.py  test_backend_machine_template_handling.py  (+1 more)
backend/tests/utils/: mock_db.py  (+1 more)
database/: init.sql
dev_tools/: generate_shims.py  run_as_module.py
heist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
monitoring/: setup_clickhouse.py  setup_cloudinit_device.py  setup_logrotate.py  setup_monitoring_vm.py  setup_network_monitoring.py  setup_services.py  setup_vrtmon.py  setup_wazuh_manager.py
setup/: backup_db.py  install.py  installer_tui.py  requirements.txt  restore_db.py  setup.py  setup_monitoring.py  uninstall.py
webserver/: php.ini  rate_limit.php
(+91 files in other folders)
